hard-gists/5305869/run.log
=== Docker Run Log for 5305869 ===
Started at: Mi 29. Okt 15:35:39 CET 2025

[2025-10-29 15:35:39] START: Running container for 5305869
[2025-10-29 15:35:40] SUCCESS: Container a7f13a65b1d9fd321577d10ef41313177e0bae449be7bddba4ca189e7ab689e1 started for 5305869
=== Container logs for 5305869 ===
  File "/snippet.py", line 28
    print "wrote %s" % new_ipynb
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5305869 ===
[2025-10-29 15:35:42] INFO: Container a7f13a65b1d9fd321577d10ef41313177e0bae449be7bddba4ca189e7ab689e1 has stopped
